# kytran-creed

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
grants/: README.md  budget-template.md  funder-profiles.md  impact-framework.md  letter-of-support-template.md  narrative-template.md  one-pager.md
kytran_creed/: app.py  auth.py  config.py  db.py  models.py  pg.py
kytran_creed/routes/: __init__.py  api_routes.py  badge_routes.py  dashboard_routes.py
kytran_creed/services/: badge_service.py  platform_stats.py  scoring_engine.py
kytran_creed/static/css/: creed.css
kytran_creed/static/js/: creed.js
kytran_creed/templates/: api_docs.html  base.html  dashboard.html  login.html  platform.html  results.html  settings.html  setup.html  welfare.html
kytran_creed/templates/programs/: index.html  toolkit.html  transparency.html  welfare.html
tests/: conftest.py  test_badge_api.py  test_events_api.py  test_scores_api.py  test_scoring_engine.py
